# mizu

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
ext/: base.sql
src/: mizu.py
src/adapters/: database.py
src/models/: conversation.py  message.py  user.py
src/objects/: conversation.py  message.py  user.py
src/state/: services.py
src/utils/: auth.py  settings.py
src/web/: __init__.py
src/web/api/: __init__.py  auth.py  register.py
src/web/pages/: __init__.py  dashboard.py
src/web/static/html/: dashboard.html  login.html  register.html
src/web/static/js/: dashboard.js  login.js  logout.js  register.js
